try to fix img distortion on Safari/Iphone

--- a/src/components/Details/Details.module.css
+++ b/src/components/Details/Details.module.css
@@ -21,9 +21,12 @@
 }
 .detail_text_img{
   width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .detail_text_img div{
-  /* width: 40%; */
+  width: 100%;
   display: flex;
   flex-direction: column;
   border-top: 1px solid grey;
