--- a/src/components/Paintings/Paintings.module.css
+++ b/src/components/Paintings/Paintings.module.css
@@ -5,12 +5,14 @@
 }
 .paint_container{
   width: 40%;
-  height: auto;
   position: relative;
   display: flex;
-  flex-direction: column;
+  align-items: flex-start;
   margin: 1rem;
   border-top: 1px solid var(--mainGray);
+}
+.paint_container img{
+    width: 100%;
 }
 .figcaption{
   position: absolute;
